# ztfperiodic

./: .dockerignore  Dockerfile  MatchfileParse_V1.py  README.md  requirements.txt  setup.cfg  setup.py
AOV/: AOV.c  AOV_cython.pyx  AOVhm_cython.pyx  compile.sh  run.sh  run_AOV_cython.py
catalogs/: Braglia_MSP_candidates_NameRADec.txt  bsc5.hdf5  bsc5_J2000.tsv  labeling_guide.csv  lamost_gaia_large_rv.hdf5  lamost_indices_multiepoch_highrv.hdf5  lamost_multiepoch_highrv.hdf5
data/co_white_dwarf_models/: T045_1E4.Z0  T047_1E4.Z0  T052_1E4.Z0  T052_E00.Z3  T054_1E4.Z0  T054_E00.Z3  T056_1E4.Z0  T056_E00.Z3  T058_1E4.Z0  T058_E00.Z3  T05_1E4.Z0  T05_1E4.Z3  T05_1E6.Z3  (+56 more)
hpctoolkit/: generate-hpctoolkit-jobscript.sh
input/: GaiaHR.h5  Rmagerr.txt  gmagerr.txt
jan/: README.txt  ZTF_LCquery.py  ZTF_matchfile_query.py  plot_LC.py
lsd/: gaia_large_rv.sh
scaling/: K80.npz  P100.npz  V100-exclusive.npz  V100.npz
training/: Basic_Model.py  LightcurveAnalysis.py
workflows/: BetaLyr.json  Blackwidow_pulsar.json  Blazkho.json  CEPII.json  Cepheid.json  DAB.json  DAV.json  DeltaScuti.json  ELCVn.json  ELMV.json  GDor.json  HADS.json  MSMS_EA.json  PNNV.json  RRlyr_ab.json  RRlyr_c.json  RRlyr_d.json  RS_CVn.json  Redback_pulsar.json  WUma.json  choices_test.csv  confusedwith.csv  eclipsing_WD+RD.json  eclipsing_dWD.json  eclipsing_sdB+RD.json  hotBLAP.json  sdBV.json
ztfperiodic/: _version.py  classifier.py  classify.py  config.py  lcstats.py  models.py  mylombscargle.py  period.py  periodsearch.py  plotfunc.py  simulate.py  specfunc.py  utils.py  zooniverse.py
(+158 files in other folders)
