[aliases]
test = pytest

[tool:pytest]
addopts = --verbose -r s

[versioneer]
VCS = git
style = pep440
versionfile_source = ztfperiodic/_version.py
versionfile_build = ztfperiodic/_version.py
tag_prefix = v
parentdir_prefix =

[coverage:run]
source = ztfperiodic
omit =
	ztfperiodic/tests/*
	ztfperiodic/_version.py

[options.package_data]
ztfperiodic = pyaov/*.so
